<resources>
    <string name="app_name">OneSS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_home_fragment">OneSS Statistics</string>

    <string name="prompt_email">UserID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This mobile number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_input_data">Input Data</string>
    <string name="btn_save_text">save</string>
    <string name="btn_cancel_text">cancel</string>
    <string name="text_input_duration">Input Duration</string>
    <string name="text_input_start_date">Start</string>
    <string name="text_input_end_date">End</string>
    <string name="text_graph_view">Graphical View</string>
    <string name="text_subject_title">Subject</string>
    <string name="text_book_type_title">Book Type</string>
    <string name="dlg_title_start_date">Select Start Date</string>
    <string name="dlg_title_end_date">Select End Date</string>
    <string name="text_ok">ok</string>
    <string name="text_book_name_title">Book Name</string>
    <string name="text_book_id_title">Order ID</string>
    <string name="text_order_status_title">Order Status</string>
    <string name="text_bookName_title">Book Name</string>
</resources>
