<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_horizontal_margin"
    app:cardCornerRadius="@dimen/margin_summary_text"
    app:cardElevation="@dimen/icon_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/card_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_summary_text"
            android:padding="@dimen/icon_padding"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

        <TextView
            android:id="@+id/card_date_modified"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_user_name"
            android:layout_marginTop="@dimen/icon_padding"
            android:padding="@dimen/icon_padding"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <LinearLayout
            android:id="@+id/card_book_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_date_modified"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/card_book_name_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_summary_text"
                android:layout_weight="3"
                android:padding="@dimen/icon_padding"
                android:text="@string/text_book_name_title"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_summary_text"
                android:layout_weight="1"
                android:padding="@dimen/icon_padding"
                android:text=":"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/card_book_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_summary_text"
                android:layout_weight="3"
                android:padding="@dimen/icon_padding"
                android:text="English-1st"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_book_type_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_book_name_container"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/card_book_type_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_summary_text"
                android:layout_weight="3"
                android:padding="@dimen/icon_padding"
                android:text="@string/text_book_type_title"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_summary_text"
                android:layout_weight="1"
                android:padding="@dimen/icon_padding"
                android:text=":"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/card_book_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_summary_text"
                android:layout_weight="3"
                android:padding="@dimen/icon_padding"
                android:text="Complete Book"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/order_id_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_book_type_container"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/card_book_id_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_summary_text"
                android:layout_weight="3"
                android:padding="@dimen/icon_padding"
                android:text="@string/text_book_id_title"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_summary_text"
                android:layout_weight="1"
                android:padding="@dimen/icon_padding"
                android:text=":"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/card_order_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_summary_text"
                android:layout_weight="3"
                android:padding="@dimen/icon_padding"
                android:text="ASDFXYZ"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/order_status_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_id_container"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:id="@+id/card_order_status_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_summary_text"
                android:layout_weight="3"
                android:padding="@dimen/icon_padding"
                android:text="@string/text_order_status_title"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_summary_text"
                android:layout_weight="1"
                android:padding="@dimen/icon_padding"
                android:text=":"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/card_order_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_summary_text"
                android:layout_weight="3"
                android:padding="@dimen/icon_padding"
                android:text="Complete"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>